SPRING WEB SERVICES CHANGELOG
=============================
http://www.springframework.org

Changes in version 1.0-M1
-------------------------
Package org.springframework.ws.endpoint
* added AbstractDom4JPayloadEndpoint
* added AbstractXomPayloadEndpoint
* renamed AbstractTransformingEndpoint to TransformerObjectSupport

Package org.springframework.ws.soap
* added SoapFaultDetail and SoapFaultDetailElement
* improved SoapMessage test suite

Package org.springframework.ws.axiom
* added AXIOM (AXis Object Model) implementation of SoapMessage hierarchy

Package org.springframework.ws.soap.endpoint
* added SimpleSoapExceptionResolver

Package org.springframework.oxm.jaxb
* added support for JAXB 2: refactored JaxbMarshaller into AbstractJaxbMarshaller, Jaxb1Marshaller and Jaxb2Marshaller

Package org.springframework.xml.transform
* added StaxSource and StaxResult, which allow for StAX readers/writers to be used as javax.xml.transform.Source and
  javax.xml.transform.Result

Package org.springframework.xml.xpath
* added XPath abstraction with support for JAXP 1.3, Jaxen, and Xalan


Changes in version 0.9.1 (06.04.2006)
-------------------------------------

Overall
* made overall thread safety fixes
* added initial reference documentation in HTML and PDF form
* (lots of minor bugfixes)

Package org.springframework.oxm
* AbstractMarshallers does proper SAXSource handling
* exposing JAXB properties on JaxbMarshaller
* added XmlOptionsFactoryBean for use with XmlBeansMarshaller
* moved JaxbContextFactoryBean functionality into JaxbMarshaller
* moved JibxBindingFactoryBean functionality into JibxMarshaller

Package org.springframework.ws.soap
* made AbstractSoapEndpointMapping ignorant of SOAP version
* added initial attachment support

Package org.springframework.xml
* added a JaxpVersion class for easy detection of JAXP version
* removed JAXP1.3 dependency




Changes in version 0.9 (11.02.2006)
-----------------------------------
* First public preview release.